fix: crop Google Drive header and controls to remove top black gap

--- a/Portfolio Attempt 1/src/index.css
+++ b/Portfolio Attempt 1/src/index.css
@@ -1343,10 +1343,10 @@ span {
 
 .project-video-container iframe {
     position: absolute;
-    top: 0;
+    top: -60px;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: calc(100% + 120px);
     border: 0;
 }
 
